Update 508 issues for contrast. Fix Toast issues from update. Fix some tests

--- a/src/components/editMeasure/measureDetails/MeasureDetails.scss
+++ b/src/components/editMeasure/measureDetails/MeasureDetails.scss
@@ -44,6 +44,11 @@
       font-size: 14px;
       font-weight: 400;
       resize: both;
+      color: #333;
+      &::placeholder {
+        color: #717171;
+        opacity: 1;
+      }
     }
     label:not(.Mui-disabled) {
       font-weight: 500;
